--- a/Scraper_Dashboard/data/config.json
+++ b/Scraper_Dashboard/data/config.json
@@ -1,6 +1,6 @@
 {
-  "targetUsername": "coldea, jsifj, kasfof",
-  "scheduleFrequency": "24h",
+  "targetUsername": "she_is_ada_, 5thkind_, _olasubomi_",
+  "scheduleFrequency": "6h",
   "autoTag": false,
   "emailNotifications": false
 }
