--- a/Scraper_Dashboard/data/config.json
+++ b/Scraper_Dashboard/data/config.json
@@ -1,5 +1,5 @@
 {
-  "targetUsername": "she_is_ada_, 5thkind_, _olasubomi_",
+  "targetUsername": "she_is_ada_, 5thkind_, gemwhisper_official, siannfitness",
   "scheduleFrequency": "6h",
   "autoTag": false,
   "emailNotifications": false
